Implement current user GET endpoint.
