# src/main/resources/openapi/openapi.yaml
@@ -126,6 +126,24 @@ paths:
         "401":
           $ref: "#/components/responses/Unauthorized"
 
+  /api/v1/users/current:
+    get:
+      operationId: getCurrentUser
+      summary: Получение текущего пользователя
+      security:
+        - bearerAuth: []
+      tags:
+        - Users
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/User"
+        "401":
+          $ref: "#/components/responses/Unauthorized"
+
 
   ##################################################
   # Players API
